# pyAirplane

./: .gitignore  .gitignore copy  .replit  README.md  airfoil.py  airplane.py  bomber.py  force.py  gitignore  main.py  nohup.out  projector.py  pyproject.toml  rigidBody.py  sevenFourSeven.py  sim.py  simple_plane.py  state.py  vector.py  vector2d.py
aerodynamics/: airplane.py  cp.py  drag_curve.py  engine.py  lift_curve.py  simulator.py  simulator_custom.py  surface.py
display/: __init__.py  debug_draw.py  projector.py
examples/: debug_draw.py  drop_a_rock.py  fly_a_747.py  fly_a_kite.py  fly_a_rocket.py  wind_tunnel.py
flight/: __init__.py  airplane.py  cp.py  engine.py  flying_object.py  simulator.py  stationary_object.py  surface.py
game/: bomber.py  box_kite.py  debug_draw.py  falling_kite.py  fly_a_747.py  fly_a_bomber.py  fly_a_kite.py  generate_falling_kite_test_data.py  generate_oscillation_curve_data.py  generate_oscillation_test_data.py  optimize.py  point_kite.py  projector.py  sim.py  sim_vs_munk.py  simple_plane.py  wind_tunnel.py
other/: rectangle.py
physics/: __init__.py  angle.py  atmosphere.py  flying_object.py  force.py  integrator.py  point.py  rigidBody.py  rigid_body.py  simulator.py  state.py  vector_2d.py
tests/: generate_falling_kite_test_data.py  generate_oscillation_curve_data.py  generate_oscillation_test_data.py  optimize.py  testProjector.py  testRigidBody.py  testSevenFourSeven.py  testSurface.py  testThinAirfoil.py  testVector.py  test_airplane.py  test_angle.py  test_atmosphere.py  test_cp.py  test_empirical_lift_curve.py  (+10 more)
(+54 files in other folders)
